[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vital-sync"
version = "0.1.0"
description = "Personal health data aggregation and analytics toolkit. Integrates Oura Ring, Hevy workouts, Renpho scale, and MyNetDiary."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "mishmishb"},
]
keywords = ["health", "oura", "hevy", "fitness", "sleep", "analytics", "wellness"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Utilities",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff",
    "bandit",
    "pip-audit",
    "pyright",
]

[project.scripts]
vital-sync-morning = "vital_sync.morning_checkin:main"
vital-sync-weekly = "vital_sync.weekly_report:main"
vital-sync-import = "vital_sync.import_csv:main"

[tool.ruff]
line-length = 99
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501", "E402", "SIM102", "SIM105", "SIM108"]  # line length; local imports; nested if clearer; try-except; if/else clearer

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B310"]  # assert intentional; urlopen uses hardcoded HTTPS URLs

[tool.pyright]
typeCheckingMode = "standard"
include = ["src"]
exclude = ["tests/**", ".venv/**"]
